--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
       "jsonwebtoken": "^8.5.1",
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
+      "nodemon": "^2.0.22",
+      "pg": "^8.10.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.40"
    },
